--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
    
-    <script src="/src/auth.js" type="module"></script>
+    <script src="./src/auth.js" type="module"></script>
 </body>
 </html>
