--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/css?family=Keania+One|Monofett|Nova+Flat&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./src/styles/reset.css">
     <link rel="stylesheet" href="./src/components/app/AuthApp.css">
+    <link rel="stylesheet" href="./src/styles/animate.css">
 </head>
 <body>
    
