next button and refesh button

--- a/public/gameplay.html
+++ b/public/gameplay.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="./src/components/game/Gameplay.css">
     <link rel="stylesheet" href="./src/components/game/Palette.css">
     <link rel="stylesheet" href="./src/components/app/GameApp.css">
+    <link rel="stylesheet" href="./src/components/nav/Nav.css">
 </head>
 <body>
     <div id="root"></div>
