cleaned up whitespace

--- a/public/tutorial.html
+++ b/public/tutorial.html
@@ -7,8 +7,24 @@
     <title>tutorial</title>
     <link href="https://fonts.googleapis.com/css?family=Keania+One|Monofett|Nova+Flat&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./src/styles/reset.css">
+    <link rel="stylesheet" href="./src/components/app/TutorialApp.css">
 </head>
 <body>
-    <script src="./src/tutorial.js" type="module"></script>
+    <main>
+        <h1>How To Play</h1>
+        <section id="container">
+            <div id="img-container">
+                <img src="./assets/tutorial1.png">
+            </div>
+            <div id="img-container">
+                <img src="./assets/tutorial2.png">
+            </div>
+        </section>
+        <div id="play-button-container">
+            <a href="/gameplay.html">▶</a>
+        </div>
+
+
+    </main>
 </body>
 </html>
